       in the list view. (Stefan)
- BUG: Issue #499: Subclassing static control
       can fail. (Stefan)
- BUG: Issue #502: repo browser shows context
       menu for SVNParentPath item. (Stefan)
- BUG: Issue #505: Crash in log dialog
       editing message. (Stefan)
- BUG: Issue #504: Log message editor always
       use antialiased fonts. (Stefan)

Version 1.8.0
See the release notes here:
http://tortoisesvn.net/tsvn_1.8_releasenotes.html

Version 1.7.13
- BUG: Issue #477: Drag and drop causes
       incorrect timestamp. (Stefan)

Version 1.7.12
- BUG: Issue #446: Infotip is shown even if path
       is fully visible. (Stefan)
- BUG: Issue #447: "Show Log" dialog chooses wrong
       range when invoked from
       "Changed Files" dialog. (Stefan)
- BUG: Issue #449: Invalid quotation in %burl and
       %yurl diff tool arguments. (Stefan)
- BUG: Issue #450: Windows path check fails if the
       path/url is escaped. (Stefan)
- BUG: Issue #455: Crash in TortoiseIDiff and
       TortoiseUDiff on Windows8. (Stefan)
- BUG: Issue #456: offline log mode does
       not activate. (Stefan)
- BUG: Issue #459: Setting a property recursively
       in the repo browser segfaults. (Stefan)
- BUG: Issue #462:  revision links not created
       in commit comments when started from
       the repo browser. (Stefan)
- BUG: Issue #463: Selection is wrong after sorting
       the file column in the log dialog. (Stefan)
- BUG: Issue #464: TortoiseBlame does not detect
       utf8/ansi encodings correctly. (Stefan)
- BUG: Issue #466: Error opening a new file in
       Check for modifications. (Stefan)
- BUG: Issue #467: Warning not shown about
       non-recursive commits. (Stefan)

Version 1.7.11
- BUG: Issue #428: out-of-date error when modifying
       properties from the repository browser. (Stefan)
- BUG: Issue #429: crash if config file is
       invalid or corrupted. (Stefan)
- BUG: Issue #430: repo browser does not
       refresh properly. (Stefan)